--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
     </div>
   </footer>
-  <script async src="js/malarkey.js"></script>
+  <script src="js/malarkey.js"></script>
   <script type="text/javascript">
     malarkey(document.querySelector('.type'),{pauseDelay: 3000,loop: !1}).type('Hello').pause().type(', I\'m Andrey').pause()
   </script>
