--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html manifest="https://andreynaldoni.com/manifest.appcache" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#">
+<html>
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
